# Pong

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile.emscripten  README.md  emscripten.sh  pong.html
export/github/: index.html
export/itch.io/: index.html  package.sh
resources/: game_768x576.tmx  menu.tmx  menu_768x576.tmx  multi.tmx  one_player.tmx  pong.icns  pong.plist  solo.tmx  two_players.tmx  win_icon.rc
src/: app.cpp  app.h  app.hpp  main.cpp  pongApp.cpp  pongApp.h  pongGame.cpp  pongGame.h  pongMenu.cpp  pongMenu.h
src/scene/: const.hpp
src/scene/1player/: 1playerConst.hpp  1playerScene.cpp  1playerScene.hpp
src/scene/1player/state/: 1playerGameOverState.cpp  1playerGameOverState.hpp  1playerGameState.cpp  1playerGameState.hpp  1playerServiceState.cpp  1playerServiceState.hpp
src/scene/2players/: 2playersConst.hpp  2playersScene.cpp  2playersScene.hpp
src/scene/2players/state/: 2playersGameOverState.cpp  2playersGameOverState.hpp  2playersGameState.cpp  2playersGameState.hpp  2playersServiceState.cpp  2playersServiceState.hpp
src/scene/game/: gameScene.cpp  gameScene.h  gameSceneLoader.cpp  gameSceneLoader.h
src/scene/menu/: menuScene.cpp  menuScene.h  menuScene.hpp  menuSceneLoader.cpp  menuSceneLoader.h
src/scene/multi/: multiConst.hpp  multiScene.cpp  multiScene.hpp
src/scene/multi/state/: gameOverState.cpp  gameOverState.hpp  gameState.cpp  gameState.hpp  multiGameOverState.cpp  multiGameOverState.hpp  multiGameState.cpp  multiGameState.hpp  multiServiceState.cpp  multiServiceState.hpp  serviceState.cpp  serviceState.hpp
src/scene/solo/: soloConst.hpp  soloScene.cpp  soloScene.hpp
src/scene/solo/state/: soloGameOverState.cpp  soloGameOverState.hpp  soloGameState.cpp  soloGameState.hpp  soloServiceState.cpp  soloServiceState.hpp
src/scene/wall/: wallConst.hpp  wallScene.cpp  wallScene.hpp
src/scene/wall/state/: wallGameOverState.cpp  wallGameOverState.hpp  wallGameState.cpp  wallGameState.hpp  wallServiceState.cpp  wallServiceState.hpp
